<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>vrep-vehicle-control-loop</groupId>
  <artifactId>vrep-vehicle-control-loop</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>operationalprofileriskassessment</name>
  <description>TODO make a description</description>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>9</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>com.sun.xml.bind</groupId>
  		<artifactId>jaxb-impl</artifactId>
  		<version>2.3.2</version>
  	</dependency>
  	<dependency>
  		<groupId>javax.xml.bind</groupId>
  		<artifactId>jaxb-api</artifactId>
  		<version>2.3.1</version>
  	</dependency>
  	<dependency>
  		<groupId>com.fasterxml.jackson.core</groupId>
  		<artifactId>jackson-core</artifactId>
  		<version>2.9.8</version>
  	</dependency>
  	<dependency>
  		<groupId>com.fasterxml.jackson.core</groupId>
  		<artifactId>jackson-annotations</artifactId>
  		<version>2.9.8</version>
  	</dependency>
  	<dependency>
  		<groupId>com.fasterxml.jackson.core</groupId>
  		<artifactId>jackson-databind</artifactId>
  		<version>2.9.8</version>
  	</dependency>
  	<dependency>
  		<groupId>org.junit.jupiter</groupId>
  		<artifactId>junit-jupiter-api</artifactId>
  		<version>5.1.0</version>
  	</dependency>
  	<dependency>
  		<groupId>org.junit.jupiter</groupId>
  		<artifactId>junit-jupiter-params</artifactId>
  		<version>5.1.0</version>
  	</dependency>
  	<dependency>
  		<groupId>org.hamcrest</groupId>
  		<artifactId>hamcrest</artifactId>
  		<version>2.1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.junit.platform</groupId>
  		<artifactId>junit-platform-engine</artifactId>
  		<version>1.3.2</version>
  	</dependency>
  	<dependency>
  		<groupId>org.junit.platform</groupId>
  		<artifactId>junit-platform-suite-api</artifactId>
  		<version>1.3.2</version>
  	</dependency>
  	<dependency>
  		<groupId>org.junit.platform</groupId>
  		<artifactId>junit-platform-launcher</artifactId>
  		<version>1.3.2</version>
  	</dependency>
  	<dependency>
  		<groupId>org.junit.jupiter</groupId>
  		<artifactId>junit-jupiter-engine</artifactId>
  		<version>5.1.0</version>
  	</dependency>
  	<dependency>
  		<groupId>org.junit.platform</groupId>
  		<artifactId>junit-platform-commons</artifactId>
  		<version>1.3.2</version>
  	</dependency>
  	<dependency>
  		<groupId>com.sun.xml.bind</groupId>
  		<artifactId>jaxb-core</artifactId>
  		<version>2.3.0</version>
  	</dependency>
  </dependencies>
</project>